--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,78 @@
 /* Estilos aplicados à todo o site */
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica;
+}
+
+header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 20px 50px;
+    box-shadow: 0 1px 8px #ddd;
+}
+
+@media (max-width: 768px) {
+    header {
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    }
+}
+
+header h1 {
+    font-size: 1.5em;
+    display: inline-block;
+    margin-right: 670px;
+}
+
+header li {
+    justify-content: flex-end;
+    list-style: none;
+    display: inline-block;
+    padding: 0 20px;
+
+}
+
+header a {
+    text-decoration: none;
+    color: #555;
+}
+
+header a:hover {
+    color: #b2dfdb;
+}
+
+h2{
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+}
+
+.texto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.texto ul{
+    list-style: square;
+    padding: 45px;
+}
+
+.final_texto p{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    padding: 170px;
+    padding-bottom: 0;
+}
