--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,5 +5,5 @@ Home
 {%endblock title%}
 
 {%block content%}
-    <h1>Bem-vindo ao serviço de localização Hermes</h1>
+    <h1 class="main_title">Bem-vindo ao serviço de localização Hermes</h1>
 {%endblock content%}
