--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,11 @@
     <header id="cabecalho-principal">
         <nav id="navegacao-principal">
             <ul>
+                <li><a href="{%url 'home'%}">Home</a></li>
+                <li><a href="{%url 'home'%}">Buscar</a></li>
+                <li><a href="{%url 'home'%}">Favoritos</a></li>
+                <li><a href="{%url 'home'%}">Histórico</a></li>
+                <img src="{% static 'profile.png' %}">
             </ul>
         </nav>
 
