mudei o tamnho da foto de perfil

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
                 <li><a href="{%url 'home'%}">Buscar</a></li>
                 <li><a href="{%url 'home'%}">Favoritos</a></li>
                 <li><a href="{%url 'home'%}">Histórico</a></li>
-                <img src="{% static 'profile.png' %}">
+                <img class="profile_pic" src="{% static 'profile.png' %}" width='40' height='40'>
             </ul>
         </nav>
 
