--- a/user/templates/registration/login.html
+++ b/user/templates/registration/login.html
@@ -1,30 +1,36 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
-
+Login de usuário
 {% endblock title %}
 
 {% block content %}
-<h1>Login de Usuário</h1>
+<div class='principal_pesquisa'>
+    <img class="USP_logo" src="{% static 'UspLogoPNG.png' %}" alt="Logo">
+    <div class="form_pesquisa">
+        <img class="Hermes_logo" src="{% static 'HermesHelmet.png' %}" alt="Logo">
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            {{form.as_p}}
+            <button type="submit" value="login">Entrar</button>
+            <input type="hidden" name="next" value="{{next}}">
+        </form>
+        <p class="cadbotao">Não possui usuário? <a href="{% url 'registrar' %}">Cadastre-se</a></p>
+        <p class="recbotao">Esqueceu sua senha? <a href="{% url 'recuperar-senha' %}">Recuperar Senha</a></p>
+    </div>
+</div>
 
 {% if form.errors %}
 <p>Sua senha e nome de usuário não correspondem. Tente novamente.</p>
 {% endif %}
 
 {% if next %}
-{% if user.is_authenticated %}
-<p>Sua conta não possui acesso a esta página. Para prosseguir, faça um login com uma conta que tenha.</p>
-{% else %}
-<p>Faça o login para ver esta página.</p>
-{% endif %}
+    {% if user.is_authenticated %}
+    <p>Sua conta não possui acesso a esta página. Para prosseguir, faça um login com uma conta que tenha.</p>
+    {% else %}
+    <p>Faça o login para ver esta página.</p>
+    {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    {{ form.as_p}}
-    <button type="submit" value="login">Entrar</button>
-    <input type="hidden" name="next" value="{{ next }}">
-</form>
-
-<p>Não possui usuário? <a href="{% url 'registrar' %}">Cadastre-se</a></p>
 {% endblock %}
