--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,18 @@
         <nav id="navegacao-principal">
             <ul>
                 <li><a href="{%url 'home'%}">Home</a></li>
-                <li><a href="{%url 'home'%}">Buscar</a></li>
+                <li><a href="{%url 'pesquisa'%}">Buscar</a></li>
                 <li><a href="{%url 'home'%}">Favoritos</a></li>
                 <li><a href="{%url 'home'%}">Histórico</a></li>
-                <img class="profile_pic" src="{% static 'profile.png' %}" width='40' height='40'>
+                {% if user.is_authenticated %}
+                <a href="{% url 'perfil' %}">
+                    <img src="{% static 'profile.png' %}" width="40" height="40">
+                </a>    
+                {% else %}
+                <a href="{% url 'login' %}">
+                    <img src="{% static 'profile.png' %}" width="40" height="40">
+                </a>
+                {% endif %}
             </ul>
         </nav>
 
