--- a/user/templates/registration/login.html
+++ b/user/templates/registration/login.html
@@ -10,7 +10,7 @@ Login de usuário
     <img class="USP_logo" src="{% static 'UspLogoPNG.png' %}" alt="Logo">
     <div class="form_pesquisa">
         <img class="Hermes_logo" src="{% static 'HermesHelmet.png' %}" alt="Logo">
-        <form method="post" action="{% url 'login' %}">
+        <form class="form-login" method="post" action="{% url 'login' %}">
             {% csrf_token %}
             {{form.as_p}}
             <button type="submit" value="login">Entrar</button>
