Coloquei um caminho para artigos de Papelaria e a barra de pesquisa agr funciona de verdade

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,4 +6,5 @@ Home
 
 {%block content%}
     <h1 class="main_title">Bem-vindo ao serviço de localização Hermes</h1>
+    <a href="{% url 'produtos:lists' %}"><button>Papelaria</button></a>
 {%endblock content%}
