--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <nav id="navegacao-principal">
             <ul>
                 <li><a href="{%url 'home'%}">Home</a></li>
-                <li><a href="{%url 'home'%}">Buscar</a></li>
+                <li><a href="{%url 'produtos:search'%}">Buscar</a></li>
                 <li><a href="{%url 'home'%}">Favoritos</a></li>
                 <li><a href="{%url 'home'%}">Histórico</a></li>
                 <img class="profile_pic" src="{% static 'profile.png' %}" width='40' height='40'>
