--- a/produtos/templates/produtos/create_list.html
+++ b/produtos/templates/produtos/create_list.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Criar Usuário
+Criar Categoria
 {% endblock title %}
 
 {% block content %}
-<h2>Criar Usuário</h2>
+<h2>Criar Categoria</h2>
 
-<form method="post">
+<form action="{% url 'produtos:create-list' %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Criar</button>
 </form>
 
-{% endblock content %} 
+{% endblock content %}
