adicionar página de mensagem para o suporte e colocar o link no perfil do usuário

--- a/user/templates/user/config_page.html
+++ b/user/templates/user/config_page.html
@@ -17,7 +17,7 @@ Perfil de usuário
     <ul>
         <li><a href="{% url 'home' %}">Adicionar local</a></li>
         <li><a href="{% url 'home' %}">Locais favoritos</a></li>
-        <li><a href="{% url 'home' %}">Fale conosco</a></li>
+        <li><a href="{% url 'fale-conosco' %}">Fale conosco</a></li>
         <a href="{% url 'logout' %}">Logout</a>
     </ul>
 </div>
