capacidade de adicionar novos locais implementada, inicio da implementação de locais favoritos

--- a/user/templates/user/config_page.html
+++ b/user/templates/user/config_page.html
@@ -15,7 +15,7 @@ Perfil de usuário
 <div class="user-opt">
     <!-- TODO: criar todas essas páginas e então corrigir os links -->
     <ul>
-        <li><a href="{% url 'home' %}">Adicionar local</a></li>
+        <li><a href="{% url 'addlocal' %}">Adicionar local</a></li>
         <li><a href="{% url 'home' %}">Locais favoritos</a></li>
         <li><a href="{% url 'fale-conosco' %}">Fale conosco</a></li>
         <a href="{% url 'logout' %}">Logout</a>
