link para locais favoritos adicionado

--- a/user/templates/user/config_page.html
+++ b/user/templates/user/config_page.html
@@ -16,7 +16,7 @@ Perfil de usuário
     <!-- TODO: criar todas essas páginas e então corrigir os links -->
     <ul>
         <li><a href="{% url 'addlocal' %}">Adicionar local</a></li>
-        <li><a href="{% url 'home' %}">Locais favoritos</a></li>
+        <li><a href="{% url 'favoritos' %}">Locais favoritos</a></li>
         <li><a href="{% url 'fale-conosco' %}">Fale conosco</a></li>
         <a href="{% url 'logout' %}">Logout</a>
     </ul>
