--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 
-{%block title%}
-Home
-{%endblock title%}
+{% block title %}
+Página Inicial
+{% endblock title %}
 
-{%block content%}
-    <h1 class="main_title">Bem-vindo ao serviço de localização Hermes</h1>
-    <a href="{% url 'produtos:lists' %}"><button>Papelaria</button></a>
-{%endblock content%}
+{% block content %}
+<h2>Bem-vindo à Página Inicial</h2>
+
+{% if listas_disponiveis %}
+<div class="categorias">
+    {% for lista in listas_disponiveis %}
+        <form method="get" action="{% url 'produtos:list-detail' lista.id %}">
+            <button type="submit">{{lista.name}}</button>
+        </form>
+    {% endfor %}
+</div>
+{% endif %}
+{% endblock content %}
