--- a/produtos/templates/produtos/detail.html
+++ b/produtos/templates/produtos/detail.html
@@ -29,7 +29,7 @@
             <p>Ainda não foram feitos Comentários este Produto.</p>
         {% endif %}
     </ul>
-    <a href="{% url 'produtos:review' produto.pk %}"><button>Adicione um comentário...</button></a>
+    <a href="{% url 'produtos:review' produto.pk %}"><button>Comentar</button></a>
 </section>
 
     {% endblock content %}
