--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,19 @@
         {% block title %}{% endblock %}
     </title>
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <style>
+        body {
+            background-image: url('{% static "Tela de Fundo.svg" %}');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        /* Adicione estilos adicionais conforme necessário */
+    </style>
 </head>
 
-<body>
+<body class="fundo">
     <header id="cabecalho-principal">
         <nav id="navegacao-principal">
             <ul> 
@@ -46,5 +56,3 @@
 </body>
 
 </html>
-
-
