--- a/user/templates/user/registro.html
+++ b/user/templates/user/registro.html
@@ -1,5 +1,11 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <form method="post" action="{% url 'registrar' %}">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Registrar</button>
 </form>
+
+{% endblock content %}
