--- a/produtos/templates/produtos/create.html
+++ b/produtos/templates/produtos/create.html
@@ -16,7 +16,7 @@
   </p>
   <p>
     <label for="id_name">Local:</label>
-    <input type="text" name="Local" id="id_Local" />
+    <input type="text" name="local" id="id_Local" />
   </p>
 
   <button type="submit">Criar</button>
