--- a/produtos/templates/produtos/lists.html
+++ b/produtos/templates/produtos/lists.html
@@ -20,7 +20,7 @@ Papelaria
                     <img src="{{ produto.poster_url }}" alt="Poster do produto {{ produto.name}}">
                 </a>
                 <p>{{ produto.name }} - {{ produto.preço }} R$</p>
-                <p>{{ produto.Local }}</p>
+                <p>{{ produto.local.nome }}</p>
             </div>
             {% endfor %}
         </div>
