--- a/produtos/templates/produtos/detail.html
+++ b/produtos/templates/produtos/detail.html
@@ -1,35 +1,41 @@
-{% extends 'base.html' %} {% block title %} {{ produto.name }}  {% endblock title %} {% block content %}
-    <h2>{{ produto.name }} </h2>
+{% extends 'base.html' %}
+
+{% block title %}
+    {{ produto.name }}
+{% endblock title %}
+
+{% block content %}
+    <h2>{{ produto.name }}</h2>
     
     <section class="dados-de-produto">
-      <img src="{{ produto.poster_url }}" alt="Poster do produto {{ produto.name}}" />
-      <ul>
-        <li>Nome: {{ produto.name }}</li>
-        <li>Preço: {{ produto.preço }} R$ </li>
-        <li>Local: {{produto.Local }}</li>
-      </ul>
+        <img src="{{ produto.poster_url }}" alt="Poster do produto {{ produto.name }}" />
+        <ul>
+            <li><span class="texto-comum">Nome:</span> {{ produto.name }}</li>
+            <li><span class="texto-comum">Preço:</span> {{ produto.preço }} R$</li>
+            <li><span class="texto-comum">Local:</span> {{ produto.Local }}</li>
+        </ul>
     </section>
     <hr>
 
-<section>
-    <header>
-        <h3>Comentários</h2>
-    </header>
-    <ul>
-        {% if produto.review_set.all %}
-            {% for review in produto.review_set.all %}
-                <figure>
-                    <blockquote>
-                        {{ review.text }}
-                    </blockquote>
-                    <figcaption>—{{ review.author }}</figcaption>
-                </figure>
-            {% endfor %}
-        {% else %}
-            <p>Ainda não foram feitos Comentários este Produto.</p>
-        {% endif %}
-    </ul>
-    <a href="{% url 'produtos:review' produto.pk %}"><button>Comentar</button></a>
-</section>
+    <section>
+        <header>
+            <h3>Comentários</h3>
+        </header>
+        <ul>
+            {% if produto.review_set.all %}
+                {% for review in produto.review_set.all %}
+                    <figure>
+                        <blockquote class="texto-comum">
+                            {{ review.text }}
+                        </blockquote>
+                        <figcaption class="texto-comum">—{{ review.author }}</figcaption>
+                    </figure>
+                {% endfor %}
+            {% else %}
+                <p class="texto-comum">Ainda não foram feitos Comentários este Produto.</p>
+            {% endif %}
+        </ul>
+        <a href="{% url 'produtos:review' produto.pk %}"><button>Comentar</button></a>
+    </section>
 
-    {% endblock content %}
+{% endblock content %}
