--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,7 @@ header {
   align-items: center;
   padding: 20px 50px;
   box-shadow: 0 1px 8px #b1b1b1;
-  background-color: rgb(255, 175, 4); /* Substitua pela cor desejada */
+  background-color: rgb(255, 175, 4); 
 }
 
 @media (max-width: 768px) {
@@ -217,9 +217,9 @@ button {
 }
 
 button img {
-  width: 40px; /* Largura da imagem */
-  height: 40px; /* Altura da imagem */
-  margin-right: 5px; /* Espaço entre a imagem e o texto */
+  width: 40px; 
+  height: 40px; 
+  margin-right: 5px; 
 }
 
 button:hover {
@@ -243,3 +243,9 @@ button:hover {
   width: 500px;
   padding: 8px;
 }
+
+.texto-comum { /* Classe que deixa o fundo Branco*/
+  background-color: rgb(255, 255, 255); 
+  display: inline;
+}
+
