--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <style>
         body {
-            background-image: url('{% static "fundo.svg" %}');
+            background-image: linear-gradient(0deg, transparent, transparent), url('/static/Tela de Fundo.svg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
