--- a/user/templates/user/registro.html
+++ b/user/templates/user/registro.html
@@ -2,10 +2,16 @@
 
 {% block content %}
 
+<h2>Cadastre-se</h2>
+
+<div class="from_container">
+<section class="card_form">
 <form method="post" action="{% url 'registrar' %}">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Registrar</button>
 </form>
+</section>
+</div>
 
 {% endblock content %}
