--- a/local/templates/local/local.html
+++ b/local/templates/local/local.html
@@ -6,17 +6,21 @@ Locais
 
 {%block content%}
 <h2 >Todos os locais registrados</h2>
-<p class="texto-comum">Não encontrou o que procurava? Tente <a href="{% url 'pesquisa' %}">procurar por um local</a></p>
+<p class="sugere-pesquisa">Não encontrou o que procurava? Tente <a href="{% url 'pesquisa' %}">procurar por um local</a></p>
 {% for local in local_list %}
-    <h2>{{ local.nome }}</h2>
-    <a href="{% url 'detalhe_local' pk=local.pk %}">
-        <img src="{{ local.imagem.url }}" alt="{{ local.nome }}">
-    </a>
-    <p>{{ local.descrição }}</p>
-    {% if local.status %}
-        <p>verificado</p>
-    {% else %}
-        <p>não verificado</p>
-    {% endif %}
+    <div class="card-container">
+        <div class="local-card">
+        <h2>{{ local.nome }}</h2>
+        <a href="{% url 'detalhe_local' pk=local.pk %}">
+            <img src="{{ local.imagem.url }}" alt="{{ local.nome }}">
+        </a>
+        <p>{{ local.descrição }}</p>
+        {% if local.status %}
+            <p>verificado ✓</p>
+        {% else %}
+            <p>não verificado ✗</p>
+        {% endif %}
+        </div>
+    </div>
 {% endfor %}
 {%endblock content%}
